# auto-extract

./: CHANGELOG.md  README.md  TODO  auto-extract.cabal  cabal.project
.github/workflow/: ci.yml
.github/workflows/: ci.yml
play/: Foo.hs  Main.hs
src/: AutoExtract.hs
src/AutoExtract/: Expr.hs  GhcFacade.hs  Parser.hs  Renamer.hs
test/: Main.hs
test-modules/: Case1.hs.expected  Case1.hs.input  Case10.hs.expected  Case10a.hs.input  Case10b.hs.expected  Case11.hs.expected  Case11.hs.input  Case12.hs.expected  Case12.hs.input  Case2.hs.expected  Case2.hs.input  Case3.hs.expected  Case3.hs.input  Case4.hs.expected  Case4.hs.input  Case5.hs.dump  Case5.hs.expected  Case5.hs.input  Case5.hs.input.dump  Case6.hs.expected  Case6.hs.input  Case7.hs.expected  Case7.hs.input  Case8.hs.expected  Case8.hs.input  Case9.hs.expected  Case9.hs.input  test-modules.cabal  testAst
