cabal-version:      3.0
name:               auto-extract
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
tested-with: GHC == 9.12.1, GHC == 9.10.1, GHC == 9.8.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  AutoExtract
    other-modules: AutoExtract.GhcFacade
    -- other-extensions:
    build-depends:    base,
                      ghc,
                      containers,
                      syb,
                      bytestring,
                      ghc-exactprint,
                      ghc-paths,
                      transformers
    hs-source-dirs:   src
    default-language: GHC2021

test-suite auto-extract-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base <5,
        process,
        directory,
        tasty,
        tasty-hunit

-- executable play
--   hs-source-dirs: play
--   main-is: Main.hs
--   build-depends:
--     base,
--     auto-extract
--   default-language: GHC2021
--   ghc-options: -fplugin AutoExtract
